--- a/index.html
+++ b/index.html
@@ -1,1 +1,45 @@
-
+<doctype html>
+  <html>
+    <head>
+      <title>
+        My Personal Profile
+      </title>
+      <meta charset="utf-8">
+      <style>
+        h1{color:green;}
+      </style>
+      <body>
+        <div id="divmanicontainer">
+          <header id="siteheader">
+            <h1 id="sitetitle">My Personal Website</h1>
+            <span id="sitemotto">Inspired to make the world a better for all</span>
+            <nav id="sitenav">
+              <ul id="ulnav">
+              <li><a href="#">Home </a></li>
+              <li><a href="#">Home </a></li>
+              <li><a href="#">Home </a></li>
+              <li><a href="#">Home </a></li>
+              <li><a href="#">Home </a></li>                
+              </ul>
+            </nav>
+            <main id="maincontent">
+              <section>
+                <h1>Personal Details</h1>
+                <p>My name is....</p>
+              </section>
+              <article>
+                <p>......</p>
+              </article>
+            </main>
+          </header>
+          <footer>
+            <p>Copyright@2026-Alice Jones</p>
+            <hr>
+            <section id="socialmedia">
+              <a href="facebook.com"><img src="FB.jpg""></a>
+              <a href="web.whatsapp.com"><imgsrc="WP.jpg"></a>
+          </footer>
+        </div>
+      </body>
+    </head>
+  </html>
