--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       </title>
       <meta charset="utf-8">
       <style>
-        h1{color:green;}
+        h1{color:purple;}
       </style>
       <body>
         <div id="divmanicontainer">
